dtos, mappers, query builders.

--- a/Api.GraphQL/Properties/launchSettings.json
+++ b/Api.GraphQL/Properties/launchSettings.json
@@ -18,5 +18,5 @@
       "useSSL": true
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
